# China-Geo-Compliance

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/china_geo_compliance/: __init__.py  __main__.py  cli.py  utils.py  validator.py
src/china_geo_compliance/data/: china_boundary.geojson
tests/: test_validator.py
tests/fixtures/: compliant.geojson  non_compliant.geojson
