[tool.poetry]
name = "china-geo-compliance"
version = "0.1.0"
description = "中国地图边界合规性检查工具"
authors = ["Chance Dean <novelnexusai@outlook.com>"]
readme = "README.md"
packages = [{include = "china_geo_compliance", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^2.0.0"
typer = "^0.9.0"
rich = "^13.0.0"
geojson = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
china-geo-compliance = "china_geo_compliance.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
